kubernetes/api-go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-go-deployment
  namespace: hm
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-go
  template:
    metadata:
      labels:
        component: api-go
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: api-go
          image: hongbomiao/hongbomiao-api-go:latest
        - name: opal-client
          image: authorizon/opal-client:0.1.8
          ports:
            - name: http
              protocol: TCP
              containerPort: 7000
            - name: opa
              protocol: TCP
              containerPort: 8181
