kubernetes/broadcast-channel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcast-channel
  namespace: hm
spec:
  replicas: 1
  selector:
    matchLabels:
      component: broadcast-channel
  template:
    metadata:
      labels:
        component: broadcast-channel
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: broadcast-channel
          image: postgres:13.3-alpine
          ports:
            - name: pgsql
              protocol: TCP
              containerPort: 5432
