kubernetes/log-receiver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-receiver-deployment
  namespace: hm
spec:
  replicas: 1
  selector:
    matchLabels:
      component: log-receiver
  template:
    metadata:
      labels:
        component: log-receiver
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: log-receiver
          image: hongbomiao/hm-log-receiver:latest
          ports:
            - name: log-receiver
              protocol: TCP
              containerPort: 8000
