kubernetes/opal-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opal-server
  namespace: hm
spec:
  replicas: 3
  selector:
    matchLabels:
      component: opal-server
  template:
    metadata:
      labels:
        component: opal-server
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: opal-server
          image: authorizon/opal-server:0.1.9
          ports:
            - name: http
              protocol: TCP
              containerPort: 7002
