kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: hm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: web
          image: hongbomiao/hongbomiao-web:latest
