kubernetes/broadcast-channel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broadcast-channel
  namespace: hm
spec:
  type: ClusterIP
  selector:
    component: broadcast-channel
  ports:
    - name: pgsql
      protocol: TCP
      port: 5432
      targetPort: pgsql
