kubernetes/opal-broadcast-channel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opal-broadcast-channel-service
  namespace: hm
spec:
  type: ClusterIP
  selector:
    component: opal-broadcast-channel
  ports:
    - name: postgres
      protocol: TCP
      targetPort: postgres
      port: 5432
