kubernetes/opal-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opal-server
  namespace: hm
spec:
  type: LoadBalancer
  selector:
    component: opal-server
  ports:
    - name: http
      protocol: TCP
      port: 7002
      targetPort: http
