kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: hm
spec:
  selector:
    app: web
  type: LoadBalancer
  ports:
    - name: web
      protocol: TCP
      targetPort: web
      port: 80
